--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,10 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo
-  annotations:
-    github.com/project-slug: darkBoft/demo
+  name: backstage-test-repo-again
 spec:
   type: other
   lifecycle: unknown
-  owner: guests
+  owner: guest
